# Encoding

.cache/clangd/index/: AudioBuffer.h.FA5A8375A9FE2567.idx  Buffer.h.481D37FCBA6D80B8.idx  ColorSpace.h.63811F5989FBFF88.idx  Component.h.2B5DDCAC36E49F80.idx  ComponentCaps.h.703B0E6B519E196B.idx  Compute.h.10D78C2807539F2D.idx  ComputeFactory.h.F181769BDD31030B.idx  Context.h.F7B8FFED15938965.idx  Data.h.2ABE4FADAB8C6EED.idx  Debug.h.D718C43406FFB691.idx  Factory.h.968CC84CCA9C0312.idx  Interface.h.294D002C85BA08A0.idx  OGLRender.cpp.2205C898CC0687B6.idx  OGLRender.h.4D6687EEB4FF2E5F.idx  Plane.h.7BD2313C5D6419F9.idx  Platform.h.3164C23AAE14743C.idx  PreAnalysis.h.CA4B9C6ED3C09CC4.idx  PropertyStorage.h.342CE5B9250D4B03.idx  PropertyStorageEx.h.9502C691C3C95A60.idx  Result.h.1A23E18C1D52CC4F.idx  Surface.h.7F37B35ED1C3B4AD.idx  Test.cpp.AE6B80A12AD28AF5.idx  Trace.h.F3CAF946E041B9B4.idx  Variant.h.00A595DDAF1C3F38.idx  Version.h.A9ABE64FB9F5F576.idx  VideoDecoderUVD.h.3BC3A46D43FC5F08.idx  VideoEncoderHEVC.h.E35D7A0E5BAE3838.idx  VideoEncoderVCE.h.6B1B8602477E99D1.idx  VulkanAMF.h.974EE00B9D66057B.idx  main.cpp.0E8FE480B1FF1E0F.idx
AMF/: CMakeLists.txt  main.cpp
AMF/.cache/clangd/index/: main.cpp.8FA17CDB9D9D6E3A.idx
VAAPI/: CMakeLists.txt  Convert.cpp  Query.cpp  main.cpp  vaEnc.cpp
VAAPI/.cache/clangd/index/: Query.cpp.16FE5C15079A9DE7.idx  Query.cpp.51CCF46650C29D2E.idx  Query.cpp.F618FD73DF68332B.idx  main.cpp.3E2A83D6BFF677E6.idx  main.cpp.41414EE65549498B.idx  (+2 more)
VAAPI/util/: EnumStringProducer.py  Input.txt  Output.txt
Vulkan/: CMakeLists.txt  main.cpp
(+1 files in other folders)
